added "GitHub" text into <a>

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="project">
           <h1>C++ Wave Simulator</h1>
-          <h2><a href="https://github.com/daniel-p-sullivan/cpp_wave"></a></h2>
+          <h2><a href="https://github.com/daniel-p-sullivan/cpp_wave">GitHub</a></h2>
           <img src="./images/wave_simulator1.gif">
           <p>
             I started this project with the intention of learning C++.  I found Java source code for the simulator, and learned to translate it into highly optimized C++ code.  The C++ Code I wrote simulated the shallow water equations, a special solution to the Navier-stokes equations.  The simulator uses the equations along with a 3 step Runge-Kutta to iterate through time with varying time steps.
