--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="main_block">
         <h1>Daniel Sullivan</h1>
         <h2>Engineer</h2>
-        <h3><a href="./resume.pdf" >Resume</a></h3>       
+        <h3><a href="./files/resume.pdf" >Resume</a></h3>       
       </div>
       <div class="portfolio">
         <h1>Portfolio</h1>
