moved mp4 to files

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="project">
           <h1>Design and Control of an Inverted Pendulum</h1>
           <video width="400" height="320" controls>
-            <source src="inverted_pendulum.mp4" type="video/mp4">
+            <source src="./files/inverted_pendulum.mp4" type="video/mp4">
           </video>
           <p>
             I developed this Inverted Pendulum system to learn more about control theory, a topic I focused on during my undergraduate degree.  My GitHub contains all relevant technical files to reproduce this inverted pendulum. STL files, C code, pinouts, and a BOM are provided. Feel free to reach out with any questions.
