--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       <div class="main_block">
         <h1>Daniel Sullivan</h1>
         <h2>Engineer</h2>
-        <h3><a href="./files/resume.pdf" >Resume</a></h3>       
+        <h3><a href="./files/resume.pdf" >Resume</a></h3>
+        <h3><a href="#portfolio">Portfolio</a></h3>       
       </div>
-      <div class="portfolio">
+      <div class="portfolio" id="portfolio">
         <h1>Portfolio</h1>
         <h2><a href="https://github.com/daniel-p-sullivan">GitHub</a></h2>
         <div class="project">
